# beanschedule

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_REVIEW.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STATEFUL_AMORTIZATION.md  TESTING.md  YAML_PIVOT_ACTION_PLAN.md  pyproject.toml  v2_ideas.md
.continue/rules/: CONTINUE.md  api-reference.md  architecture.md  coding-standards.md  setup-and-commands.md  testing-guide.md
.github/workflows/: tests.yml
beanschedule/: __init__.py  amortization.py  cli.py  constants.py  detector.py  forecast_advancement.py  forecast_loader.py  hook.py  loader.py  matcher.py  pending.py  recurrence.py  schema.py  types.py  utils.py
beanschedule/cli/: __init__.py  builders.py  commands.py  formatters.py  pending_cmds.py
beanschedule/plugins/: forecast.py  schedules.py
docs/: ADVANCED.md  CLI.md  INDEX.md  PENDING.md  PLUGIN.md  SCHEDULES.md
examples/: README.md  example.beancount  pending.beancount  skips.beancount
examples/schedules/: _config.yaml  auto-loan-amortization.yaml  credit-card-payment.yaml  insurance-auto.yaml  loan-payment-biweekly.yaml  mortgage-amortized.yaml  mortgage-payment.yaml  mortgage-with-escrow.yaml  paycheck-bimonthly.yaml  paycheck-biweekly.yaml  rent-payment.yaml  subscription-annual.yaml  subscription-streaming.yaml  utilities-electric.yaml  utilities-water.yaml
src/beanschedule/: cli.py  hook.py  loader.py  matcher.py  recurrence.py  schema.py
tests/: __init__.py  conftest.py  test_advanced_recurrence.py  test_amortization.py  test_beangulp_integration.py  test_cli.py  test_detector.py  test_example_schedules.py  test_forecast_advancement.py  test_forecast_loader.py  test_forecast_plugin.py  test_hook.py  test_hook_forecast_integration.py  test_loader.py  test_matcher.py  test_migrate.py  test_pending.py  test_recurrence.py  test_schedules_plugin.py  test_schema.py  test_skip_markers.py
tests/fixtures/schedules/: _config.yaml  bimonthly-paycheck.yaml  monthly-rent.yaml  weekly-gym.yaml  yearly-subscription.yaml
